Add final styling

--- a/index.html
+++ b/index.html
@@ -28,10 +28,12 @@
           <button type="submit" class="btn-success">Make your purchase</button>
         </form>
       </div>
-    <div class="output">
-      <h3>Thank you for your order!</h3>
+    <div class="output well">
+      <h1>Thank you for your order<span class="name"></span>!</h1>
       <p>
-        Thank you for your order <span class="name"></span>! Your billing address is <span class="address"></span>. If this is wrong, your <span class="ducks"></span> ducks will die in a box in the back of a ups warehouse.
+        Congratulations! The billing address you entered is <span class="address"></span>. If this is wrong, your <span class="ducks"></span> ducks will die in a box in the back of a UPS warehouse.
+      </p>
+      <p>If you'd like to change it, please <a href="mailto:DucksOnDeathRow@springfieldpenitentiary.gov">contact</a> our customer service representative. Please allow at least 72 hours for a response as he lives in a van down by the river. Where do you think we get all these ducks?
       </p>
     </div>
     <div class="row bottom">
